--- a/app/views/activities/_activity.html.haml
+++ b/app/views/activities/_activity.html.haml
@@ -1,6 +1,6 @@
 %tr{data: {activity: activity.id.to_s}}
   = render partial: 'activities/score_cell', locals: { resource: activity }
-  %td= activity.commented_on.strftime("%d/%b/%Y")
+  %td= activity.created_at.strftime("%d/%b/%Y")
   %td= activity.repo
   %td= activity.event_type
   %td
