--- a/app/views/judging/_commit.html.haml
+++ b/app/views/judging/_commit.html.haml
@@ -11,16 +11,16 @@
         %i.fa.fa-github-alt
         View
     %span.time.pull-right
-      = commit.commit_date.strftime('%H:%m, %d %b %Y')
+      = commit.created_at.strftime('%H:%m, %d %b %Y')
   %p= commit.message
   %ul.list-inline
     %li.rating-control.br-theme-bars-square{ data: { url: judge_rating_path(commit) }}
-      = select_tag :points, options_for_select(COMMIT_RATINGS, commit.judge_rating(current_user) || commit.auto_score), include_blank: 'NR' 
+      = select_tag :points, options_for_select(COMMIT_RATINGS, commit.judge_rating(current_user) || commit.auto_score), include_blank: 'NR'
     %li.pull-right.comments
       = link_to '#', class: 'link-black text-sm show-comments', data: { id: commit.id.to_s, url: comments_judging_index_path('commits', commit.id) } do
         %i.fa.fa-comments-o.margin-r-5
         %span{id: "comments_count_#{commit.id}"}
-          Comments 
+          Comments
           (#{commit.comments_count})
   .comments{id: "comments_#{commit.id.to_s}"}
     = render partial: 'comments/form', locals: { resource: commit }
